# youroku-app-1

./: Dockerfile  app.py  app1.py  build.sh  pyproject.toml  render.yaml  requirements.txt  新規 テキスト ドキュメント.txt
templates/: generate_form.html  login.html  result.html
